parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls vdecl
   4        | decls fdecl

   5  fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE

   6  formals_opt :
   7              | formal_list

   8  formal_list : typ ID
   9              | formal_list COMMA typ ID

  10  typ : INT
  11      | BOOL
  12      | FLOAT
  13      | STRING

  14  vdecl_list :
  15             | vdecl_list vdecl

  16  vdecl : typ ID SEMI

  17  stmt_list :
  18            | stmt_list stmt

  19  stmt : expr SEMI
  20       | RETURN expr_opt SEMI
  21       | LBRACE stmt_list RBRACE
  22       | IF LPAREN expr RPAREN stmt
  23       | IF LPAREN expr RPAREN stmt ELSE stmt
  24       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  25       | WHILE LPAREN expr RPAREN stmt

  26  expr_opt :
  27           | expr

  28  expr : LITERAL
  29       | FLIT
  30       | BLIT
  31       | ID
  32       | SLITERAL
  33       | expr PLUS expr
  34       | expr MINUS expr
  35       | expr TIMES expr
  36       | expr DIVIDE expr
  37       | expr EQ expr
  38       | expr NEQ expr
  39       | expr LT expr
  40       | expr LEQ expr
  41       | expr GT expr
  42       | expr GEQ expr
  43       | expr AND expr
  44       | expr OR expr
  45       | MINUS expr
  46       | NOT expr
  47       | ID ASSIGN expr
  48       | ID LPAREN args_opt RPAREN
  49       | LPAREN expr RPAREN

  50  args_opt :
  51           | args_list

  52  args_list : expr
  53            | args_list COMMA expr

  54  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (54)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (54)

	.  reduce 54


state 4
	program : decls . EOF  (1)
	decls : decls . vdecl  (3)
	decls : decls . fdecl  (4)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	STRING  shift 8
	EOF  shift 9
	.  error

	vdecl  goto 10
	fdecl  goto 11
	typ  goto 12


state 5
	typ : INT .  (10)

	.  reduce 10


state 6
	typ : BOOL .  (11)

	.  reduce 11


state 7
	typ : FLOAT .  (12)

	.  reduce 12


state 8
	typ : STRING .  (13)

	.  reduce 13


state 9
	program : decls EOF .  (1)

	.  reduce 1


state 10
	decls : decls vdecl .  (3)

	.  reduce 3


state 11
	decls : decls fdecl .  (4)

	.  reduce 4


state 12
	fdecl : typ . ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ . ID SEMI  (16)

	ID  shift 13
	.  error


state 13
	fdecl : typ ID . LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	vdecl : typ ID . SEMI  (16)

	SEMI  shift 14
	LPAREN  shift 15
	.  error


state 14
	vdecl : typ ID SEMI .  (16)

	.  reduce 16


state 15
	fdecl : typ ID LPAREN . formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)
	formals_opt : .  (6)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	STRING  shift 8
	RPAREN  reduce 6

	typ  goto 16
	formals_opt  goto 17
	formal_list  goto 18


state 16
	formal_list : typ . ID  (8)

	ID  shift 19
	.  error


state 17
	fdecl : typ ID LPAREN formals_opt . RPAREN LBRACE vdecl_list stmt_list RBRACE  (5)

	RPAREN  shift 20
	.  error


state 18
	formals_opt : formal_list .  (7)
	formal_list : formal_list . COMMA typ ID  (9)

	COMMA  shift 21
	RPAREN  reduce 7


state 19
	formal_list : typ ID .  (8)

	.  reduce 8


state 20
	fdecl : typ ID LPAREN formals_opt RPAREN . LBRACE vdecl_list stmt_list RBRACE  (5)

	LBRACE  shift 22
	.  error


state 21
	formal_list : formal_list COMMA . typ ID  (9)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	STRING  shift 8
	.  error

	typ  goto 23


state 22
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE . vdecl_list stmt_list RBRACE  (5)
	vdecl_list : .  (14)

	.  reduce 14

	vdecl_list  goto 24


state 23
	formal_list : formal_list COMMA typ . ID  (9)

	ID  shift 25
	.  error


state 24
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list . stmt_list RBRACE  (5)
	vdecl_list : vdecl_list . vdecl  (15)
	stmt_list : .  (17)

	INT  shift 5
	BOOL  shift 6
	FLOAT  shift 7
	STRING  shift 8
	LPAREN  reduce 17
	LBRACE  reduce 17
	RBRACE  reduce 17
	MINUS  reduce 17
	NOT  reduce 17
	RETURN  reduce 17
	IF  reduce 17
	FOR  reduce 17
	WHILE  reduce 17
	LITERAL  reduce 17
	BLIT  reduce 17
	ID  reduce 17
	FLIT  reduce 17
	SLITERAL  reduce 17

	vdecl  goto 26
	typ  goto 27
	stmt_list  goto 28


state 25
	formal_list : formal_list COMMA typ ID .  (9)

	.  reduce 9


state 26
	vdecl_list : vdecl_list vdecl .  (15)

	.  reduce 15


state 27
	vdecl : typ . ID SEMI  (16)

	ID  shift 29
	.  error


state 28
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list . RBRACE  (5)
	stmt_list : stmt_list . stmt  (18)

	LPAREN  shift 30
	LBRACE  shift 31
	RBRACE  shift 32
	MINUS  shift 33
	NOT  shift 34
	RETURN  shift 35
	IF  shift 36
	FOR  shift 37
	WHILE  shift 38
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	stmt  goto 44
	expr  goto 45


state 29
	vdecl : typ ID . SEMI  (16)

	SEMI  shift 14
	.  error


state 30
	expr : LPAREN . expr RPAREN  (49)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 46


state 31
	stmt : LBRACE . stmt_list RBRACE  (21)
	stmt_list : .  (17)

	.  reduce 17

	stmt_list  goto 47


state 32
	fdecl : typ ID LPAREN formals_opt RPAREN LBRACE vdecl_list stmt_list RBRACE .  (5)

	.  reduce 5


state 33
	expr : MINUS . expr  (45)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 48


state 34
	expr : NOT . expr  (46)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 49


state 35
	stmt : RETURN . expr_opt SEMI  (20)
	expr_opt : .  (26)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	SEMI  reduce 26

	expr  goto 50
	expr_opt  goto 51


state 36
	stmt : IF . LPAREN expr RPAREN stmt  (22)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (23)

	LPAREN  shift 52
	.  error


state 37
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (24)

	LPAREN  shift 53
	.  error


state 38
	stmt : WHILE . LPAREN expr RPAREN stmt  (25)

	LPAREN  shift 54
	.  error


state 39
	expr : LITERAL .  (28)

	.  reduce 28


state 40
	expr : BLIT .  (30)

	.  reduce 30


state 41
	expr : ID .  (31)
	expr : ID . ASSIGN expr  (47)
	expr : ID . LPAREN args_opt RPAREN  (48)

	LPAREN  shift 55
	ASSIGN  shift 56
	SEMI  reduce 31
	RPAREN  reduce 31
	COMMA  reduce 31
	PLUS  reduce 31
	MINUS  reduce 31
	TIMES  reduce 31
	DIVIDE  reduce 31
	EQ  reduce 31
	NEQ  reduce 31
	LT  reduce 31
	LEQ  reduce 31
	GT  reduce 31
	GEQ  reduce 31
	AND  reduce 31
	OR  reduce 31


state 42
	expr : FLIT .  (29)

	.  reduce 29


state 43
	expr : SLITERAL .  (32)

	.  reduce 32


state 44
	stmt_list : stmt_list stmt .  (18)

	.  reduce 18


state 45
	stmt : expr . SEMI  (19)
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	SEMI  shift 57
	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIVIDE  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	AND  shift 68
	OR  shift 69
	.  error


state 46
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : LPAREN expr . RPAREN  (49)

	RPAREN  shift 70
	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIVIDE  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	AND  shift 68
	OR  shift 69
	.  error


state 47
	stmt_list : stmt_list . stmt  (18)
	stmt : LBRACE stmt_list . RBRACE  (21)

	LPAREN  shift 30
	LBRACE  shift 31
	RBRACE  shift 71
	MINUS  shift 33
	NOT  shift 34
	RETURN  shift 35
	IF  shift 36
	FOR  shift 37
	WHILE  shift 38
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	stmt  goto 44
	expr  goto 45


state 48
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : MINUS expr .  (45)

	.  reduce 45


state 49
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : NOT expr .  (46)

	.  reduce 46


state 50
	expr_opt : expr .  (27)
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIVIDE  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	AND  shift 68
	OR  shift 69
	SEMI  reduce 27
	RPAREN  reduce 27


state 51
	stmt : RETURN expr_opt . SEMI  (20)

	SEMI  shift 72
	.  error


state 52
	stmt : IF LPAREN . expr RPAREN stmt  (22)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (23)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 73


state 53
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (24)
	expr_opt : .  (26)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	SEMI  reduce 26

	expr  goto 50
	expr_opt  goto 74


state 54
	stmt : WHILE LPAREN . expr RPAREN stmt  (25)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 75


state 55
	expr : ID LPAREN . args_opt RPAREN  (48)
	args_opt : .  (50)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	RPAREN  reduce 50

	expr  goto 76
	args_opt  goto 77
	args_list  goto 78


state 56
	expr : ID ASSIGN . expr  (47)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 79


state 57
	stmt : expr SEMI .  (19)

	.  reduce 19


state 58
	expr : expr PLUS . expr  (33)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 80


state 59
	expr : expr MINUS . expr  (34)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 81


state 60
	expr : expr TIMES . expr  (35)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 82


state 61
	expr : expr DIVIDE . expr  (36)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 83


state 62
	expr : expr EQ . expr  (37)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 84


state 63
	expr : expr NEQ . expr  (38)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 85


state 64
	expr : expr LT . expr  (39)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 86


state 65
	expr : expr LEQ . expr  (40)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 87


state 66
	expr : expr GT . expr  (41)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 88


state 67
	expr : expr GEQ . expr  (42)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 89


state 68
	expr : expr AND . expr  (43)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 90


state 69
	expr : expr OR . expr  (44)

	LPAREN  shift 30
	MINUS  shift 33
	NOT  shift 34
	LITERAL  shift 39
	BLIT  shift 40
	ID  shift 41
	FLIT  shift 42
	SLITERAL  shift 43
	.  error

	expr  goto 91


state 70
	expr : LPAREN expr RPAREN .  (49)

	.  reduce 49


state 71
	stmt : LBRACE stmt_list RBRACE .  (21)

	.  reduce 21


state 72
	stmt : RETURN expr_opt SEMI .  (20)

	.  reduce 20


state 73
	stmt : IF LPAREN expr . RPAREN stmt  (22)
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (23)
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	RPAREN  shift 92
	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIVIDE  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	AND  shift 68
	OR  shift 69
	.  error


state 74
	stmt : FOR LPAREN expr_opt . SEMI expr SEMI expr_opt RPAREN stmt  (24)

	SEMI  shift 93
	.  error


state 75
	stmt : WHILE LPAREN expr . RPAREN stmt  (25)
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	RPAREN  shift 94
	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIVIDE  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	AND  shift 68
	OR  shift 69
	.  error


state 76
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	args_list : expr .  (52)

	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIVIDE  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	AND  shift 68
	OR  shift 69
	RPAREN  reduce 52
	COMMA  reduce 52


state 77
	expr : ID LPAREN args_opt . RPAREN  (48)

	RPAREN  shift 95
	.  error


state 78
	args_opt : args_list .  (51)
	args_list : args_list . COMMA expr  (53)

	COMMA  shift 96
	RPAREN  reduce 51


state 79
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)
	expr : ID ASSIGN expr .  (47)

	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIVIDE  shift 61
	EQ  shift 62
	NEQ  shift 63
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	AND  shift 68
	OR  shift 69
	SEMI  reduce 47
	RPAREN  reduce 47
	COMMA  reduce 47


state 80
	expr : expr . PLUS expr  (33)
	expr : expr PLUS expr .  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	TIMES  shift 60
	DIVIDE  shift 61
	SEMI  reduce 33
	RPAREN  reduce 33
	COMMA  reduce 33
	PLUS  reduce 33
	MINUS  reduce 33
	EQ  reduce 33
	NEQ  reduce 33
	LT  reduce 33
	LEQ  reduce 33
	GT  reduce 33
	GEQ  reduce 33
	AND  reduce 33
	OR  reduce 33


state 81
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr MINUS expr .  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	TIMES  shift 60
	DIVIDE  shift 61
	SEMI  reduce 34
	RPAREN  reduce 34
	COMMA  reduce 34
	PLUS  reduce 34
	MINUS  reduce 34
	EQ  reduce 34
	NEQ  reduce 34
	LT  reduce 34
	LEQ  reduce 34
	GT  reduce 34
	GEQ  reduce 34
	AND  reduce 34
	OR  reduce 34


state 82
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr TIMES expr .  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	.  reduce 35


state 83
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr DIVIDE expr .  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	.  reduce 36


state 84
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr EQ expr .  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIVIDE  shift 61
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	SEMI  reduce 37
	RPAREN  reduce 37
	COMMA  reduce 37
	EQ  reduce 37
	NEQ  reduce 37
	AND  reduce 37
	OR  reduce 37


state 85
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr NEQ expr .  (38)
	expr : expr . LT expr  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIVIDE  shift 61
	LT  shift 64
	LEQ  shift 65
	GT  shift 66
	GEQ  shift 67
	SEMI  reduce 38
	RPAREN  reduce 38
	COMMA  reduce 38
	EQ  reduce 38
	NEQ  reduce 38
	AND  reduce 38
	OR  reduce 38


state 86
	expr : expr . PLUS expr  (33)
	expr : expr . MINUS expr  (34)
	expr : expr . TIMES expr  (35)
	expr : expr . DIVIDE expr  (36)
	expr : expr . EQ expr  (37)
	expr : expr . NEQ expr  (38)
	expr : expr . LT expr  (39)
	expr : expr LT expr .  (39)
	expr : expr . LEQ expr  (40)
	expr : expr . GT expr  (41)
	expr : expr . GEQ expr  (42)
	expr : expr . AND expr  (43)
	expr : expr . OR expr  (44)

	PLUS  shift 58
	MINUS  shift 59
	TIMES  shift 60
	DIVIDE  shift 61
	SEMI  reduce 39
	RPAREN  reduce 39
	COMMA  reduce 39
	EQ  reduce 39
	NEQ  reduce 39
	LT  reduce 39
	LEQ  reduce 39
	GT  reduce 39
	GEQ  reduce 39
	AND  reduce 39
	OR  reduce 39

